--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     </head>
     <body>
         <h1>Hello world</h1>
+        <nav>
+            <ul>
+                <li><a href="/index.html">Homepage</a></li>
+                <li><a href="/kitchen-sink.html">HTML Tags</a></li>
+                <li><a href="https://extension.berkeley.edu/" target="_blank">UC Berkeley Extension</a></li>
+            </ul>
+        </nav>
         <p>This is my first html page.</p>
     </body>
 </html>
