--- a/kitchen-sink.html
+++ b/kitchen-sink.html
@@ -8,6 +8,13 @@
     </head>
 
     <body>
+        <nav>
+            <ul>
+                <li><a href="/index.html">Homepage</a></li>
+                <li><a href="/kitchen-sink.html">HTML Tags</a></li>
+                <li><a href="https://extension.berkeley.edu/" target="_blank">UC Berkeley Extension</a></li>
+            </ul>
+        </nav>
         <h1>Kitchen Sink</h1>
         <h2>Heading 2</h2>
         <h3>Heading 3</h3>
