--- a/index.html
+++ b/index.html
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>First html page</title>
+        <title>First HTML page</title>
     </head>
     <body>
+        <header>
+            <p>Homepage</p>
+            <nav>
+                <ul>
+                    <li><a href="/index.html">Homepage</a></li>
+                    <li><a href="/kitchen-sink.html">HTML Tags</a></li>
+                    <li><a href="/semantic-markup.html">Semantic HTML</a></li>
+                    <li><a href="https://extension.berkeley.edu/" target="_blank">UC Berkeley Extension</a></li>
+                </ul>
+            </nav>
+        </header>
         <h1>Hello world</h1>
-        <nav>
-            <ul>
-                <li><a href="/index.html">Homepage</a></li>
-                <li><a href="/kitchen-sink.html">HTML Tags</a></li>
-                <li><a href="https://extension.berkeley.edu/" target="_blank">UC Berkeley Extension</a></li>
-            </ul>
-        </nav>
         <p>This is my first html page.</p>
     </body>
 </html>
