--- a/kitchen-sink.html
+++ b/kitchen-sink.html
@@ -8,13 +8,17 @@
     </head>
 
     <body>
-        <nav>
-            <ul>
-                <li><a href="/index.html">Homepage</a></li>
-                <li><a href="/kitchen-sink.html">HTML Tags</a></li>
-                <li><a href="https://extension.berkeley.edu/" target="_blank">UC Berkeley Extension</a></li>
-            </ul>
-        </nav>
+        <header>
+            <p>HTML Tags</p>
+            <nav>
+                <ul>
+                    <li><a href="/index.html">Homepage</a></li>
+                    <li><a href="/kitchen-sink.html">HTML Tags</a></li>
+                    <li><a href="/semantic-markup.html">Semantic HTML</a></li>
+                    <li><a href="https://extension.berkeley.edu/" target="_blank">UC Berkeley Extension</a></li>
+                </ul>
+            </nav>
+        </header>
         <h1>Kitchen Sink</h1>
         <h2>Heading 2</h2>
         <h3>Heading 3</h3>
@@ -45,6 +49,41 @@
             <li>Unordered list list item 2</li>
             <li>Unordered list list item 3</li>
         </ul>
+
+        <a href="https://google.com">Link to Google</a>
+        <a href="https://yahoo.com" targer="_blank">Link to Yahoo!</a>
+
+        <!--This is an external image.-->
+        <img src="http://placehold.it/125x100"/>
+
+        <!--This is an internal image.-->
+        <img src="./assets/images/puppy-picture.jpeg"/>
+
+        <style>
+            table, th, td{
+                border: 1px solid black;
+                border-collapse: collapse
+            }
+
+            th, td{
+                padding: 15px
+            }
+        </style>
+        
+        <table>
+            <thead>
+                <th>Header one</th>
+                <th>Header two</th>
+                <th>Header three</th>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Table cell one</td>
+                    <td>Table cell two</td>
+                    <td>Table cell three</td>
+                </tr>
+            </tbody>
+        </table>
 
     </body>
 
