added periods to file paths

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
             <p>Homepage</p>
             <nav>
                 <ul>
-                    <li><a href="/index.html">Homepage</a></li>
-                    <li><a href="/kitchen-sink.html">HTML Tags</a></li>
-                    <li><a href="/semantic-markup.html">Semantic HTML</a></li>
+                    <li><a href="./index.html">Homepage</a></li>
+                    <li><a href="./kitchen-sink.html">HTML Tags</a></li>
+                    <li><a href="./semantic-markup.html">Semantic HTML</a></li>
                     <li><a href="https://extension.berkeley.edu/" target="_blank">UC Berkeley Extension</a></li>
                 </ul>
             </nav>
