--- a/css-basics.html
+++ b/css-basics.html
@@ -12,5 +12,22 @@
         <div class="box red-box red-box-see-through center-align-text">Box</div>
         <div class="box yellow-box yellow-box-see-through right-align-text">Box</div>
         <div class="box green-box green-box-see-through left-align-text">Box</div>
+
+        <div class="dropdown">
+            <span>Menu</span>
+            <nav class="dropdown-content">
+                <ul>
+                    <li>
+                        <a href="https://google.com">Google</a>
+                    </li>
+                    <li>
+                        <a href="https://yahoo.com">Yahoo!</a>
+                    </li>
+                    <li>
+                        <a href="https://duckduckgo.com">DuckDuckGo</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
     </body>
 </html>
