--- a/jquery-slidedown-menu.html
+++ b/jquery-slidedown-menu.html
@@ -23,7 +23,7 @@
     <body>
         <header>
             <div class="main-menu">
-                <button id="menuToggle">Menu Icon</button>
+                <button id="menuToggle">≡</button>
                 <nav id="main-navigation">
                     <ul>
                         <li><a href="#"></a></li>
